--- a/css-dev/_inc/_variables.scss
+++ b/css-dev/_inc/_variables.scss
@@ -7,47 +7,16 @@ $font-path: "#{$route}/fonts";
 
 // Sprite Path: WATCHOUT - It's SVG!
 $spriteFile: "#{$route}/images/sprite.svg";
-$spriteTabsFile: "#{$route}/images/tab-sprite.svg";
-$CalendarSvg: "#{$route}/images/icon-calendar.svg";
 
 // Global settings + Overwrite the Bootstrap
 $line-height-base: 1.428571429;
 
 //Name specific Colors
-$white: #FFF;
-$black: #000;
-$blue: #5aa3e8;
-$light_white: #EFEFEF;
-$orange: #e87600;
-$orange_hover: #FFB340;
-$teal: #378F7B;
-$light_teal: #54B6BB;
-$light_red: #e37e81;
-$red: #CC0000;
-$yellow: #FFC81F;
-$amber: #CCA019;
-$brand_green: #4CAF50;
-$green: #719425;
-$dark_green: #4F6D06;
-$dark_bright_green: #0f4b1d;
-$medium_green: #3C6A00;
-$bright_green: #9bbe3c;
-$medium_light_green: #4FD0AD;
-$light_green: #CCD6B6;
-$order_green: #719425;
-$dark_gray: #575451;
-$slate_gray: #4f5b69;
-$slate_dark_gray: #333;
-$medium_gray: #999;
-$medium_dark_gray: #8F8F8F;
-$medium_light_gray: #B0B0B0;
-$light_gray: #CCC;
-$disabled_gray: #DEDEDE;
-$disabled_fill: #F7F7F7;
-$brand_gray: #F0EDE9;
-$brand_black: #141413;
-$row_hover: #ffeebd;
-$purple_medium: #AA85D5;
+$body-bg: #222529;
+$nav-bg: #2D3136;
+$alt-row: #393E44;
+$white: #f6f3ef;
+$th-color: #b4bac6;
 
 $brand-black: #141413;
 $brand-dark-orange: #C26F00;
@@ -77,9 +46,10 @@ $carousel_bg_gray: #F3F3F3;
 $my_case: #fffae9;
 
 //Font-family and sizes
-$font-family-mark: "MarkOffc";
+$font-family-normal: "SF Text";
+
+$font-family-display: "SF Display";
 $font-family-fa: "FontAwesome";
-$font-medium: "MarkOffc-m";
 
 $header_fs: 36px;
 $section_header: 30px;
