--- a/css-dev/_inc/_variables.scss
+++ b/css-dev/_inc/_variables.scss
@@ -17,6 +17,8 @@ $nav-bg: #2D3136;
 $alt-row: #393E44;
 $white: #f6f3ef;
 $th-color: #b4bac6;
+$input-text: #9c9ea1;
+$asset-link: #76ddfb;
 
 $brand-black: #141413;
 $brand-dark-orange: #C26F00;
@@ -49,7 +51,7 @@ $my_case: #fffae9;
 $font-family-normal: "SF Text";
 
 $font-family-display: "SF Display";
-$font-family-fa: "FontAwesome";
+$fa-font-path: "../fonts";
 
 $header_fs: 36px;
 $section_header: 30px;
