--- a/styles/crypto-allegro.css
+++ b/styles/crypto-allegro.css
@@ -5145,63 +5145,63 @@ body {
 @font-face {
     font-family: "SF Display";
     font-weight: 900;
-    src: url("https://sf.abarba.me/SF-UI-Display-Black.otf");
+    src: url("../fonts/SF-UI-Display-Black.otf");
 }
 
 /** Bold */
 @font-face {
     font-family: "SF Display";
     font-weight: 700;
-    src: url("https://sf.abarba.me/SF-UI-Display-Bold.otf");
+    src: url("../fonts/SF-UI-Display-Bold.otf");
 }
 
 /** Heavy */
 @font-face {
     font-family: "SF Display";
     font-weight: 800;
-    src: url("https://sf.abarba.me/SF-UI-Display-Heavy.otf");
+    src: url("../fonts/SF-UI-Display-Heavy.otf");
 }
 
 /** Light */
 @font-face {
     font-family: "SF Display";
     font-weight: 200;
-    src: url("https://sf.abarba.me/SF-UI-Display-Light.otf");
+    src: url("../fonts/SF-UI-Display-Light.otf");
 }
 
 /** Medium */
 @font-face {
     font-family: "SF Display";
     font-weight: 500;
-    src: url("https://sf.abarba.me/SF-UI-Display-Medium.otf");
+    src: url("../fonts/SF-UI-Display-Medium.otf");
 }
 
 /** Regular */
 @font-face {
     font-family: "SF Display";
     font-weight: 400;
-    src: url("https://sf.abarba.me/SF-UI-Display-Regular.otf");
+    src: url("../fonts/SF-UI-Display-Regular.otf");
 }
 
 /** Semibold */
 @font-face {
     font-family: "SF Display";
     font-weight: 600;
-    src: url("https://sf.abarba.me/SF-UI-Display-Semibold.otf");
+    src: url("../fonts/SF-UI-Display-Semibold.otf");
 }
 
 /** Thin */
 @font-face {
     font-family: "SF Display";
     font-weight: 300;
-    src: url("https://sf.abarba.me/SF-UI-Display-Thin.otf");
+    src: url("../fonts/SF-UI-Display-Thin.otf");
 }
 
 /** Ultralight */
 @font-face {
     font-family: "SF Display";
     font-weight: 100;
-    src: url("https://sf.abarba.me/SF-UI-Display-Ultralight.otf");
+    src: url("../fonts/SF-UI-Display-Ultralight.otf");
 }
 
 /*---------------------------------------------------------------------------*
@@ -5211,7 +5211,7 @@ body {
 @font-face {
     font-family: "SF Text";
     font-weight: 700;
-    src: url("https://sf.abarba.me/SF-UI-Text-Bold.otf");
+    src: url("../fonts/SF-UI-Text-Bold.otf");
 }
 
 /** Bold Italic */
@@ -5219,14 +5219,14 @@ body {
     font-family: "SF Text";
     font-weight: 700;
     font-style: italic;
-    src: url("https://sf.abarba.me/SF-UI-Text-BoldItalic.otf");
+    src: url("../fonts/SF-UI-Text-BoldItalic.otf");
 }
 
 /** Heavy */
 @font-face {
     font-family: "SF Text";
     font-weight: 800;
-    src: url("https://sf.abarba.me/SF-UI-Text-Heavy.otf");
+    src: url("../fonts/SF-UI-Text-Heavy.otf");
 }
 
 /** Heavy Italic */
@@ -5234,14 +5234,14 @@ body {
     font-family: "SF Text";
     font-weight: 800;
     font-style: italic;
-    src: url("https://sf.abarba.me/SF-UI-Text-HeavyItalic.otf");
+    src: url("../fonts/SF-UI-Text-HeavyItalic.otf");
 }
 
 /** Light */
 @font-face {
     font-family: "SF Text";
     font-weight: 200;
-    src: url("https://sf.abarba.me/SF-UI-Text-Light.otf");
+    src: url("../fonts/SF-UI-Text-Light.otf");
 }
 
 /** Light Italic */
@@ -5249,14 +5249,14 @@ body {
     font-family: "SF Text";
     font-weight: 200;
     font-style: italic;
-    src: url("https://sf.abarba.me/SF-UI-Text-HeavyItalic.otf");
+    src: url("../fonts/SF-UI-Text-HeavyItalic.otf");
 }
 
 /** Medium */
 @font-face {
     font-family: "SF Text";
     font-weight: 500;
-    src: url("https://sf.abarba.me/SF-UI-Text-Medium.otf");
+    src: url("../fonts/SF-UI-Text-Medium.otf");
 }
 
 /** Medium Italic */
@@ -5264,14 +5264,14 @@ body {
     font-family: "SF Text";
     font-weight: 500;
     font-style: italic;
-    src: url("https://sf.abarba.me/SF-UI-Text-MediumItalic.otf");
+    src: url("../fonts/SF-UI-Text-MediumItalic.otf");
 }
 
 /** Regular */
 @font-face {
     font-family: "SF Text";
     font-weight: 400;
-    src: url("https://sf.abarba.me/SF-UI-Text-Regular.otf");
+    src: url("../fonts/SF-UI-Text-Regular.otf");
 }
 
 /** Regular Italic */
@@ -5279,14 +5279,14 @@ body {
     font-family: "SF Text";
     font-weight: 400;
     font-style: italic;
-    src: url("https://sf.abarba.me/SF-UI-Text-RegularItalic.otf");
+    src: url("../fonts/SF-UI-Text-RegularItalic.otf");
 }
 
 /** Semibold */
 @font-face {
     font-family: "SF Text";
     font-weight: 600;
-    src: url("https://sf.abarba.me/SF-UI-Text-Semibold.otf");
+    src: url("../fonts/SF-UI-Text-Semibold.otf");
 }
 
 /** Semibold Italic */
@@ -5294,14 +5294,14 @@ body {
     font-family: "SF Text";
     font-weight: 600;
     font-style: italic;
-    src: url("https://sf.abarba.me/SF-UI-Text-SemiboldItalic.otf");
+    src: url("../fonts/SF-UI-Text-SemiboldItalic.otf");
 }
 
 /** Ultrathin */
 @font-face {
     font-family: "SF Text";
     font-weight: 100;
-    src: url("https://sf.abarba.me/SF-UI-Text-Ultrathin.otf");
+    src: url("../fonts/SF-UI-Text-Ultrathin.otf");
 }
 
 /** Ultrathin Italic */
@@ -5309,5 +5309,5 @@ body {
     font-family: "SF Text";
     font-weight: 100;
     font-style: italic;
-    src: url("https://sf.abarba.me/SF-UI-Text-UltrathinItalic.otf");
+    src: url("../fonts/SF-UI-Text-UltrathinItalic.otf");
 }
