Settings page HTML

--- a/css-dev/_inc/_variables.scss
+++ b/css-dev/_inc/_variables.scss
@@ -19,20 +19,13 @@ $white: #f6f3ef;
 $th-color: #b4bac6;
 $input-text: #9c9ea1;
 $asset-link: #76ddfb;
+$secondary: #b4b0a9;
+$success: #8db92e;
+$blue: #53a8e2;
 
 $brand-black: #141413;
 $brand-dark-orange: #C26F00;
 $brand-header-bg: #EBE7E1;
-
-//Pills
-$ICA: #628120;
-$BIN: #D1E3AB;
-$RNG: #D1E3AB;
-$RTN: #7F640F;
-$Proc: #AA6100;
-$RPPS: #B24813;
-$BILR: #BD262A;
-$PAR: #D1E3AB;
 
 // Use specific colors
 $red_notification:#FF3333;
