Mobile styling clean up

--- a/css-dev/crypto-allegro.scss
+++ b/css-dev/crypto-allegro.scss
@@ -154,6 +154,20 @@ body {
         height: 17px !important;
         top: -7px !important;
     }
+    
+    @media (max-width: 480px) {
+        .btn {
+            width: 100%;
+            margin-left: 0;
+            margin-bottom: 16px;
+        }
+    }
+    
+    @media (max-width: 767px) {
+        .table-responsive {
+            border: none;
+        }
+    }
 }
 
 
