--- a/styles/crypto-allegro.css
+++ b/styles/crypto-allegro.css
@@ -5396,11 +5396,127 @@ readers do not read off random characters that represent icons */
     opacity: 1;
 }
 
+/* Shrinking the sidebar from 250px to 80px and center aligining its content*/
+#sidebar.active {
+    min-width: 80px;
+    max-width: 80px;
+    text-align: center;
+}
+
+/* Toggling the sidebar header content, hide the big heading [h3] and showing the small heading [strong] and vice versa*/
+#sidebar .sidebar-header strong {
+    display: none;
+}
+
+#sidebar.active .sidebar-header h3 {
+    display: none;
+}
+
+#sidebar.active .sidebar-header strong {
+    display: block;
+}
+
+#sidebar ul li {
+    margin-bottom: 16px;
+}
+
+#sidebar ul li a {
+    text-align: left;
+}
+
+#sidebar.active ul li a {
+    padding: 20px 10px;
+    text-align: center;
+    font-size: 0.85em;
+}
+
+#sidebar.active ul li a i {
+    margin-right: 0;
+    display: block;
+    font-size: 1.8em;
+    margin-bottom: 5px;
+}
+
+/* Same dropdown links padding*/
+#sidebar.active ul ul a {
+    padding: 10px !important;
+}
+
+/* Changing the arrow position to bottom center position, 
+   translateX(50%) works with right: 50% 
+   to accurately  center the arrow */
+#sidebar.active .dropdown-toggle::after {
+    top: auto;
+    bottom: 10px;
+    right: 50%;
+    -webkit-transform: translateX(50%);
+        -ms-transform: translateX(50%);
+            transform: translateX(50%);
+}
+
+@media (max-width: 768px) {
+    /* 80px and its content aligned to centre. Pushing it off the screen with the
+       negative left margin
+    */
+    #sidebar.active {
+        min-width: 80px;
+        max-width: 80px;
+        text-align: center;
+        margin-left: -80px !important;
+    }
+    /* Reappearing the sidebar on toggle button click */
+    #sidebar {
+        margin-left: 0;
+    }
+    /* Toggling the sidebar header content, 
+       hide the big heading [h3] and showing the small heading [strong] and vice versa
+    */
+    #sidebar .sidebar-header strong {
+        display: none;
+    }
+    #sidebar.active .sidebar-header h3 {
+        display: none;
+    }
+    #sidebar.active .sidebar-header strong {
+        display: block;
+    }
+    /* Downsize the navigation links font size */
+    #sidebar.active ul li a {
+        padding: 20px 10px;
+        font-size: 0.85em;
+    }
+    #sidebar.active ul li a i {
+        margin-right: 0;
+        display: block;
+        font-size: 1.8em;
+        margin-bottom: 5px;
+    }
+    /* Adjust the dropdown links padding*/
+    #sidebar.active ul ul a {
+        padding: 10px !important;
+    }
+    /* Changing the arrow position to bottom center position, 
+      translateX(50%) works with right: 50% 
+      to accurately  center the arrow */
+    .dropdown-toggle::after {
+        top: auto;
+        bottom: 10px;
+        right: 50%;
+        -webkit-transform: translateX(50%);
+            -ms-transform: translateX(50%);
+                transform: translateX(50%);
+    }
+}
+
 body {
     background: #222529;
     font-family: "SF Display";
     font-weight: 400;
     color: #f6f3ef;
+}
+
+.crypto {
+    /* Set background color*/
 }
 
 .crypto h1,
@@ -5410,6 +5526,14 @@ body {
 .crypto h5,
 .crypto h6 {
     text-transform: uppercase;
+}
+
+.crypto .error {
+    color: #f33;
+}
+
+.crypto .success {
+    color: #8db92e;
 }
 
 .crypto .navbar-inverse {
@@ -5564,6 +5688,152 @@ body {
     .crypto .table-responsive {
         border: none;
     }
+}
+
+.crypto .sidebar,
+.crypto #sidebar {
+    background: #222529;
+    height: 100%;
+    width: 80px !important;
+}
+
+.crypto #sidebar {
+    width: 40px !important;
+}
+
+.crypto .sidebar li.inactive {
+    opacity: 0.3;
+}
+
+.crypto .sidebar::-webkit-scrollbar {
+    width: 3px;
+}
+
+.crypto .sidebar::-webkit-scrollbar-track {
+    background-color: #393e44;
+}
+
+.crypto .sidebar::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-color: #53a8e2;
+}
+
+.crypto .asset-detail-logo,
+.crypto .asset-detail-logo img {
+    height: 64px;
+    width: 64px;
+    display: inline-block;
+}
+
+.crypto .asset-detail-logo {
+    margin-right: 16px;
+}
+
+.crypto .asset-name {
+    font-size: 32px;
+    line-height: 64px;
+    font-weight: 600;
+}
+
+.crypto .asset-detail {
+    font-size: 18px;
+    color: #f6f3ef;
+    font-weight: 600;
+}
+
+.crypto .asset-currency,
+.crypto .asset-direction {
+    font-weight: 200;
+}
+
+.crypto .asset-ticker {
+    font-size: 20px;
+    color: #b4b0a9;
+    margin-left: 8px;
+    font-weight: 400;
+}
+
+.crypto .rating-title {
+    font-size: 11px;
+    color: #b4b0a9;
+    display: block;
+    text-transform: uppercase;
+}
+
+.crypto .rating,
+.crypto .score {
+    font-size: 36px;
+    display: block;
+    font-weight: 200;
+}
+
+.crypto .asset-detail-box {
+    background-color: #393e44;
+    border-radius: 4px;
+    padding: 24px 16px;
+    margin-bottom: 16px;
+}
+
+.crypto .offset {
+    padding-left: 16px;
+}
+
+.crypto .asset-description {
+    height: 150px;
+    overflow-y: scroll;
+}
+
+.crypto .asset-description p {
+    padding-right: 16px;
+}
+
+.crypto .asset-description::-webkit-scrollbar {
+    width: 3px;
+}
+
+.crypto .asset-description::-webkit-scrollbar-track {
+    background-color: #393e44;
+}
+
+.crypto .asset-description::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-color: #53a8e2;
+}
+
+.crypto .col-gutters {
+    margin-right: 16px;
+}
+
+.crypto .col-gutters.col-md-12 {
+    width: calc(100% - 16px);
+}
+
+.crypto .col-gutters.col-md-8 {
+    width: calc(66.66666667% - 16px);
+}
+
+.crypto .col-gutters.col-md-6 {
+    width: calc(50% - 16px);
+}
+
+.crypto .col-gutters.col-md-4 {
+    width: calc(33.33333333% - 16px);
+}
+
+.crypto .col-gutters.col-md-3 {
+    width: calc(25% - 16px);
+}
+
+.crypto .full-height {
+    height: 100%;
+}
+
+.crypto .clearfix {
+    overflow: auto;
+}
+
+.crypto .full-span {
+    max-height: 375px;
 }
 
 /*---------------------------------------------------------------------------*
