--- a/styles/dashboard.css
+++ b/styles/dashboard.css
@@ -2,9 +2,9 @@
  * Base structure
  */
 
-/* Move down content because we have a fixed navbar that is 50px tall */
+/* Move down content because we have a fixed navbar that is 62px tall */
 body {
-  padding-top: 50px;
+  padding-top: 63px;
 }
 
 
@@ -36,7 +36,7 @@ body {
 @media (min-width: 768px) {
   .sidebar {
     position: fixed;
-    top: 51px;
+    top: 40px;
     bottom: 0;
     left: 0;
     z-index: 1000;
@@ -44,8 +44,11 @@ body {
     padding: 20px;
     overflow-x: hidden;
     overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
-    background-color: #f5f5f5;
     border-right: 1px solid #eee;
+  }
+    
+  .sidebar-offset {
+    margin-left: 80px;
   }
 }
 
@@ -65,25 +68,6 @@ body {
   color: #fff;
   background-color: #428bca;
 }
-
-
-/*
- * Main content
- */
-
-.main {
-  padding: 20px;
-}
-@media (min-width: 768px) {
-  .main {
-    padding-right: 40px;
-    padding-left: 40px;
-  }
-}
-.main .page-header {
-  margin-top: 0;
-}
-
 
 /*
  * Placeholder dashboard ideas
